--- a/satimage/satimage.Rmd
+++ b/satimage/satimage.Rmd
@@ -227,13 +227,23 @@ sprintf("Net micro F-Score: %1.3f", nnet.micro.fscore)
 ```{r}
 trainset.clustering = dataset.input.pca
 labels = dataset.pca[1]
+labels.names = c('red soil', 'cotton crop', 'grey soil', 'damp grey soil',
+                 'soil with vegetation stubble', 'very damp grey soil')
 
 # dataframe to vector conversion
 labels.list <- c()
 for(i in 1:nrow(labels)){
-  labels.list <- append(labels.list, labels[i,1])
+  if(labels[i,1] == labels.names[1]) labels.list = append(labels.list, 1)
+  if(labels[i,1] == labels.names[2]) labels.list = append(labels.list, 2)
+  if(labels[i,1] == labels.names[3]) labels.list = append(labels.list, 3)
+  if(labels[i,1] == labels.names[4]) labels.list = append(labels.list, 4)
+  if(labels[i,1] == labels.names[5]) labels.list = append(labels.list, 5)
+  if(labels[i,1] == labels.names[6]) labels.list = append(labels.list, 6)
 }
 
+```
+
+```{r}
 set.seed(1)
 nk = 2:12
 SW = sapply(nk, function(k){cluster.stats(dist(trainset.clustering), 
@@ -299,6 +309,18 @@ fviz_cluster(fit, trainset.clustering, ellipse.type = "norm", axes=c(3,4), main=
              geom="point")
 ```
 
+```{r}
+# Confusion Matrix
+source("clustering_confusion_matrix.R")
+
+confusion_matrix = clustering_confusion_matrix(fit$cluster, labels.list, 6, 6)
+
+for (i in 1:6) {
+    pie_title = sprintf("Pie chart for Cluster %d", i)
+    pie(confusion_matrix[i,], main=pie_title, labels=labels.names, col=rainbow(6))
+}
+```
+
 ### K=3
 Nonostante il valore di Silhouette maggiore rispetto a k=6, il parametro k=3 porta ad un peggioramento nella misura di similarita' tra cluster rilevati e classi del dataset
 ```{r}
@@ -332,6 +354,18 @@ fviz_cluster(fit, trainset.clustering, ellipse.type = "norm", axes=c(2,4), main=
 
 fviz_cluster(fit, trainset.clustering, ellipse.type = "norm", axes=c(3,4), main="Dimensions: 3 & 4", 
              geom="point")
+```
+
+```{r}
+# Confusion Matrix
+source("clustering_confusion_matrix.R")
+
+confusion_matrix = clustering_confusion_matrix(fit$cluster, labels.list, 3, 6)
+
+for (i in 1:3) {
+    pie_title = sprintf("Pie chart for Cluster %d", i)
+    pie(confusion_matrix[i,], main=pie_title, labels=labels.names, col=rainbow(6))
+}
 ```
 
 ### Evaluation al variare di k
